<resources>
    <string name="app_name">MyPocket</string>
    <string name="initial">Welcome myPocket ! Perform a brief registration to start using it!</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="bank_name">Bank Name</string>
    <string name="balance">Balance</string>
    <string name="clean">Clean</string>
    <string name="submit">Submit</string>
    <string name="registration_error">Error ! Please complete all fields !</string>
    <string name="successfully_registration">Successfully registration data !</string>
    <string name="database_insert_error">Error insert Data ! Data already exists</string>
    <string name="account_registration">Register here your Account !</string>
    <string name="card_name">Card Name</string>
    <string name="credit">Credit</string>
    <string name="maturity">Maturity</string>
    <string name="card_registration">Register here your Card !</string>
    <string name="spending_registration">Register here your Spending !</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_card">Delete Card</string>
    <string name="delete_spending">Delete Spending</string>
    <string name="delete_information">Delete here your data !</string>
    <string name="successfully_delete">Delete was completed !</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="emission_date">Emission Date</string>
    <string name="category">Category</string>
    <string name="account">Account</string>
    <string name="credit_card">Credit Card</string>
    <string name="choice_debiting">Choice Debiting</string>
    <string name="debit">Debit</string>
    <string name="card">Card</string>
    <string name="spending">Spending</string>
    <string name="balance_credit">View here your Balance and Credit</string>
    <string name="day_renovation_balance">Day Renewal of the Balance</string>
    <string name="day_renovation_credit">Day Renewal of the Credit</string>
    <string name="invalid_number">Invalid Number Try Again</string>
    <string name="spending_by_category">Spending by Category</string>
    <string name="send_email">Send for Email</string>
    <string name="month">Month</string>
    <string name="spending_by_month">Spending by Month</string>
    <string name="all_spending">All Spending Registered</string>
    <string name="total_spending">Total Spending</string>
    <string name="date">Date</string>
    <string name="all_spending_month">All Spending Registered and Total Amount on </string>
    <string name="configuration_account">Alter Configuration Account</string>
    <string name="configuration_credit_card">Alter Configuration Credit Card</string>
    <string name="configuration_information">Change Settings here</string>
    <string name="configuration_update_successfully">
The settings were successfully updated !</string>
    <string name="error_empty_account_card">Error ! Do you need register Account and Card for open this Activity !</string>

    <string name="auto_transport">Auto and Transport</string>
    <string name="bills">Bills</string>
    <string name="business_services">Business and Services</string>
    <string name="education">Education</string>
    <string name="entertainment">Entertainment</string>
    <string name="food_dining">Food and Dining</string>
    <string name="gifts_donations">Gifts and Donations</string>
    <string name="health_fitness">Health and Fitness</string>
    <string name="income">Income</string>
    <string name="investments">Investments</string>
    <string name="kids">Kids</string>
    <string name="other">Other</string>
    <string name="personal_care">Personal Care</string>
    <string name="shopping">Shopping</string>
    <string name="taxes">Taxes</string>
    <string name="travel">Travel</string>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>


</resources>
