<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.SpendingMonthActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/month"
        android:id="@+id/textView31"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="45dp" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnMonth"
        android:layout_alignBottom="@+id/textView31"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView31"
        android:layout_toEndOf="@+id/textView31" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/total_spending"
        android:id="@+id/textView32"
        android:layout_marginBottom="74dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edtTotal"
        android:layout_alignBottom="@+id/textView32"
        android:layout_toRightOf="@+id/textView32"
        android:layout_alignRight="@+id/scrollView1"
        android:layout_alignEnd="@+id/scrollView1" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView31"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="26dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tableSpending"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#4963f5"
                android:layout_below="@+id/spnMonth"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_above="@+id/textView32"
                android:id="@+id/tableRow">

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/spending"
                    android:id="@+id/textView15"
                    android:layout_column="0"
                    android:paddingLeft="5dp" />

                <TextView
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/date"
                    android:id="@+id/textView16"
                    android:layout_column="1"
                    android:paddingLeft="5dp" />

                <TextView
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/category"
                    android:id="@+id/textView14"
                    android:layout_column="2"
                    android:paddingLeft="5dp" />

            </TableRow>
        </TableLayout>
    </ScrollView>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_email"
        android:id="@+id/btnSendEmail"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
