<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="wallyson.com.br.mypocket.view.InitialActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtName"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="169dp"
        android:layout_toRightOf="@+id/btnClean"
        android:layout_alignRight="@+id/btnSubmit"
        android:layout_alignEnd="@+id/btnSubmit" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edtEmail"
        android:layout_alignTop="@+id/edtName"
        android:layout_alignRight="@+id/edtName"
        android:layout_alignEnd="@+id/edtName"
        android:layout_marginTop="59dp"
        android:layout_alignLeft="@+id/edtName"
        android:layout_alignStart="@+id/edtName" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:id="@+id/btnSubmit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clean"
        android:id="@+id/btnClean"
        android:layout_alignBottom="@+id/btnSubmit"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/name"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/edtName"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/email"
        android:id="@+id/textView2"
        android:layout_alignBottom="@+id/edtEmail"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/imageView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:weightSum="1"
        android:layout_above="@+id/edtEmail">

        <ImageView
            android:layout_width="196dp"
            android:layout_height="wrap_content"
            android:id="@+id/imageView7"
            android:layout_gravity="center_horizontal"
            android:background="@mipmap/logo"
            android:layout_weight="0.58" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:textColor="#0e7fbb"
            android:text="@string/initial"
            android:textStyle="bold"
            android:textSize="50px"
            android:textAlignment="center" />
    </LinearLayout>

</RelativeLayout>
